--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@
                 <li>
                     <strong>🌱 1817 – Criação do Estado de Alagoas</strong>
                     <p>João é enviado ao ano de 1817, quando Alagoas se separa de Pernambuco e se torna uma capitania independente.</p>
+                </li>    
                 <li>
                     <strong>🔥 1832–1835 – Guerra dos Cabanos</strong>
                     <p>No meio de revoltas populares, João se junta aos cabanos em sua luta por justiça social.</p>
@@ -67,16 +68,10 @@
         </section>
 
         <section class="trailer">
-            <h2>Trailer do Jogo</h2>
+            <h2>Prévia do Jogo</h2>
             <p>Assista ao trailer oficial e sinta a emoção de entrar nessa aventura histórica!</p>
             <div class="trailer-container">
-                <iframe 
-                    src="https://www.youtube.com/embed/SEU_VIDEO_ID" 
-                    title="Trailer do Jogo Raízes de Alagoas" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen>
-                </iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GJcC4j5eu4Y?si=pquIfNXFu8y-w0gK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
